--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Estart - ремонт электрооборудования автомобилей</title>
   <meta name="description" content="Компания Estart рада предложить качественные услуги по ремонту авто в Минске.
-Низкие цены, запчасти от проверенных поставщиков с гарантией от 30 дней. Звоните!">
+Низкие цены, быстрый ремонт. Звоните!">
   <meta name="keywords" content="ремонт генератора, ремонт стартера, выездной ремонт, автоэлектрик на выезд, выездной ремонт стартера, выездной ремонт генератора, сто на выезд,
 автоэлектрик на дом">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -340,6 +340,24 @@
 
   gtag('config', 'UA-113534371-1');
 </script>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(92700699, "init", {
+    clickmap:true,
+    trackLinks:true,
+    accurateTrackBounce:true,
+    webvisor:true,
+    ecommerce:"dataLayer"
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/92700699" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 <script src="js/jquery.js"></script>
 <script src="js/main.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
