--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body style="overflow-x: hidden">
+<body>
 <header>
   <nav>
     <h1 class="logo">
@@ -317,7 +317,7 @@
           <li><a href="tel:+375336076531">+375(33)607-65-31</a></li>
           <li><a href="tel:+375299969629">+375(29)996-96-29</a></li>
           <li><a href="pages/contacts.html" style="text-decoration: underline">Переулок Ольшевского 7/9.<br>
-          помещение 320. 3-й этаж.</a></li>
+          помещение 320. 3 этаж.</a></li>
           <li><a href="#">estart.by@gmail.com</a></li>
         </ul>
       </div>
@@ -344,7 +344,7 @@
 <script type="text/javascript" >
   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
     m[i].l=1*new Date();
-    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    for (let j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
     k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
