--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="box first-slide">
         <div class="first-slide__contentBx contentBx">
           <ion-icon name="checkmark-done-circle-outline"></ion-icon>
-          <h2><a href="#">Сделайте свой автомобиль более надежным</a></h2>
+          <h2><a href="#" >Сделайте свой автомобиль более надежным</a></h2>
           <p>Быстрый ремонт стартеров и генераторов</p>
           <!--<button>Подробнее</button>-->
         </div>
@@ -175,14 +175,15 @@
     <!--<button>Весь лист</button>-->
   </div>
 </div>
-<div class="auto-repair-services">
+<div class="auto-repair-services" >
   <h2>Услуги по ремонту авто</h2>
   <hr>
   <p>
     Мы предлагаем полный спектр услуг по ремонту электрооборудования авто в Минске. <br>
     Наши специалисты знают, как быстро и качественно отремонтировать автомобиль.
   </p>
-  <div class="card">
+  <a href="pages/services/diagnostika.html">
+    <div class="card">
       <div class="card__image-holder">
         <img class="card__image" src="img/index/photo/engine_diagnostik.webp" alt="wave" />
       </div>
@@ -191,31 +192,36 @@
           Компьютерная диагностика
         </h2>
       </div>
-  </div>
+    </div>
+  </a>
 
 
-  <div class="card">
-    <div class="card__image-holder">
-      <img class="card__image" src="img/index/photo/alternator.webp" alt="wave" />
+  <a href="pages/services/repaier_alternator.html">
+    <div class="card">
+      <div class="card__image-holder">
+        <img class="card__image" src="img/index/photo/alternator.webp" alt="wave" />
+      </div>
+      <div class="card-title">
+        <h2>
+          Ремонт генератора
+        </h2>
+      </div>
     </div>
-    <div class="card-title">
-      <h2>
-        Ремонт генератора
-      </h2>
-    </div>
-  </div>
+  </a>
 
 
-  <div class="card">
-    <div class="card__image-holder">
-      <img class="card__image" src="img/index/photo/repair_starter.webp" alt="wave" />
+  <a href="pages/services/repair_starter.html">
+    <div class="card">
+      <div class="card__image-holder">
+        <img class="card__image" src="img/index/photo/repair_starter.webp" alt="wave" />
+      </div>
+      <div class="card-title">
+        <h2>
+          Ремонт стартера
+        </h2>
+      </div>
     </div>
-    <div class="card-title">
-      <h2>
-        Ремонт стартера
-      </h2>
-    </div>
-  </div>
+  </a>
   <br>
   <button><a href="pages/services.html">все услуги</a></button>
 </div>
@@ -232,7 +238,7 @@
         <h3>Ремонт электрики</h3>
 
         <ion-icon name="flash-outline"></ion-icon>
-       <!-- <hr>-->
+        <!-- <hr>-->
         <p>
           Быстрый и надежный ремонт электрооборудования автомобиля любой марки в кратчайшие сроки.
         </p>
@@ -288,7 +294,7 @@
       </p>
     </div>
   </div>
-  <button><a href="pages/contacts.html">Подробнее</a></button>
+  <button><a href="pages/services.html">Подробнее</a></button>
 </div>
 <footer class="footer">
   <div class="container">
@@ -318,7 +324,7 @@
           <li><a href="tel:+375299969629">+375(29)996-96-29</a></li>
           <li><a href="pages/contacts.html" style="text-decoration: underline">Переулок Ольшевского 7/9.<br>
           помещение 320. 3 этаж.</a></li>
-          <li><a href="#">estart.by@gmail.com</a></li>
+          <li><a href="mailto:estart.by@gmail.com">estart.by@gmail.com</a></li>
         </ul>
       </div>
       <div class="footer-col">
