--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="shortcut icon" type="image/svg" href="favicon.ico">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
