--- a/pages/services.html
+++ b/pages/services.html
@@ -49,6 +49,28 @@
     Мы справимся с любой проблемой как на иномарках, так и на отечественных автомобилях.
   </p>
   <div class="company-overview-container">
+
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3><a href="services/repair_starter.html">Ремонт стартера</a></h3>
+
+      <ion-icon name="construct-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Ремонт стартера любой марки авто. Ремонтируем стартера легковых, грузовых и спец.транспорта.
+      </p>
+    </div>
+
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3><a href="services/repaier_alternator.html">Ремонт генератора</a></h3>
+
+      <ion-icon name="construct-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Быстрый ремонт генератора любой сложности и марки авто.
+        Запчасти от проверенных поставщиков. Гарантия от 30 дней.
+      </p>
+    </div>
+
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
       <h3><a href="services/repair_electricity.html">Ремонт электрики</a></h3>
 
