--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
   <meta name="description" content="Компания Estart рада предложить качественные услуги по ремонту авто в Минске.
 Низкие цены, быстрый ремонт. Звоните!">
   <meta name="keywords" content="ремонт генератора, ремонт стартера, выездной ремонт, автоэлектрик на выезд, выездной ремонт стартера, выездной ремонт генератора, сто на выезд,
-автоэлектрик на дом">
+автоэлектрик на дом, ремонт генераторов, ремонт генераторов минск с выездом, ремонт генератора минск,
+ремонт стартера с выездом минск, выезд мастера ремонт авто, ремонт генератора с выездом, ремонт стартеров минск, мобильное сто,
+вызов автоэлектрика, автосервис с выездом, ремонт стартеров на выезд, автоэлектрик с выездом на дом,
+мобильная автомастерская, estart, естарт, автосервис, автослесарь на дом, автоэлектрик выездной,
+автоэлектрик на выезд, автоэлектрик на дом, автоэлектрик с выездом, восстановление стартера, восстановление генератора,
+выезд электрика по машине, выездной автомеханик, выездной автоэлектрик, выездной ремонт, выездной ремонт авто, выездной ремонт генераторов,
+выездной электрик авто, генератор ремонт минск, диагностика генератора, диагностика сто, замена стартера цена,
+замена щеток генератора, компьютерная диагностика авто, прайс лист на ремонт автомобилей, проверка стартера,
+разборка генератора valeo, ремонт авто, ремонт авто на выезд, ремонт авто на дому, ремонт автомобилей,
+ремонт автомобилей с выездом, ремонт автомобили, ремонт бензогенератора, ремонт генератора хонда, ремонт генераторов малиновка, ремонт генераторов минск, ремонт генераторов минск малиновка, ремонт генераторов с выездом, ремонт генераторов уручье, ремонт генераторов фрунзенский район,
+ремонт машин, ремонт машины с выездом, ремонт стартера, ремонт стартера минск, ремонт стартеров, ремонт стартеров генераторов, ремонт стартеров и генераторов, ремонт стартеров минск с выездом, снятие генератора, срочный ремонт авто с выездом,сто, сто автоэлектрика, сто на выезд, сто форд, стоимость работы автоэлектрика,
+то и ремонт генератора, услуги автоэлектрика, услуги автоэлектрика с выездом, услуги по ремонту автомобилей, услуги по ремонту электрооборудования, частный автоэлектрик">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
