--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 разборка генератора valeo, ремонт авто, ремонт авто на выезд, ремонт авто на дому, ремонт автомобилей,
 ремонт автомобилей с выездом, ремонт автомобили, ремонт бензогенератора, ремонт генератора хонда, ремонт генераторов малиновка, ремонт генераторов минск, ремонт генераторов минск малиновка, ремонт генераторов с выездом, ремонт генераторов уручье, ремонт генераторов фрунзенский район,
 ремонт машин, ремонт машины с выездом, ремонт стартера, ремонт стартера минск, ремонт стартеров, ремонт стартеров генераторов, ремонт стартеров и генераторов, ремонт стартеров минск с выездом, снятие генератора, срочный ремонт авто с выездом,сто, сто автоэлектрика, сто на выезд, сто форд, стоимость работы автоэлектрика,
-то и ремонт генератора, услуги автоэлектрика, услуги автоэлектрика с выездом, услуги по ремонту автомобилей, услуги по ремонту электрооборудования, частный автоэлектрик">
+то и ремонт генератора, услуги автоэлектрика, услуги автоэлектрика с выездом, услуги по ремонту автомобилей, услуги по ремонту электрооборудования, частный автоэлектрик,
+ремонт стартеров, ремонт стартера, ремонт генератора, отремонтировать стартер,  отремонтировать генератор, мастерская по ремонту стартеров, мастерская по ремонту стартеров, ремонт стартера минск, ремонт генератора в минске, ремонт стартера в минске, ремонт стартеров и генераторов минск,
+">
+  <link rel="canonical" href="https://estart.by/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:locale" content="ru_RU">
+  <meta property="og:title" content="Ремонт стартеров и генераторов в Минске">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/index.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
