--- a/index.html
+++ b/index.html
@@ -250,6 +250,28 @@
     Так же обслуживаем стартеры/генераторы для грузовой и спец. техники.
   </p>
   <div class="company-overview-container">
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3><a href="pages/services/repair_starter.html">Ремонт стартера</a></h3>
+
+      <ion-icon name="construct-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Ремонт стартера любой марки авто. Ремонтируем стартера легковых, грузовых и спец.транспорта.
+      </p>
+    </div>
+
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3><a href="pages/services/repaier_alternator.html">Ремонт генератора</a></h3>
+
+      <ion-icon name="construct-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Быстрый ремонт генератора любой сложности и марки авто.
+        Запчасти от проверенных поставщиков. Гарантия от 30 дней.
+      </p>
+    </div>
+
+
       <div class="company-overview-container__first-box company-overview-container__ion-icon">
         <h3>Ремонт электрики</h3>
 
@@ -309,6 +331,7 @@
         Выезд в любую точку Минска. Быстрый ремонт стартера и генератора на месте поломки.
       </p>
     </div>
+
   </div>
   <button><a href="pages/services.html">Подробнее</a></button>
 </div>
