--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Estart - ремонт электрооборудования автомобилей</title>
-  <meta name="description" content="Компания Estart рада предложить качественные услуги по ремонту авто в Минске.
-Низкие цены, быстрый ремонт. Звоните!">
+  <meta name="description" content="Проверка и ремонт стартеров и генераторов авто за 1 день! ✅ Ремонт стартера, генератора по низким ценам в Минске. ✅ Гарантия от 30 дней.">
   <meta name="keywords" content="ремонт генератора, ремонт стартера, выездной ремонт, автоэлектрик на выезд, выездной ремонт стартера, выездной ремонт генератора, сто на выезд,
 автоэлектрик на дом, ремонт генераторов, ремонт генераторов минск с выездом, ремонт генератора минск,
 ремонт стартера с выездом минск, выезд мастера ремонт авто, ремонт генератора с выездом, ремонт стартеров минск, мобильное сто,
@@ -15,20 +14,27 @@
 выезд электрика по машине, выездной автомеханик, выездной автоэлектрик, выездной ремонт, выездной ремонт авто, выездной ремонт генераторов,
 выездной электрик авто, генератор ремонт минск, диагностика генератора, диагностика сто, замена стартера цена,
 замена щеток генератора, компьютерная диагностика авто, прайс лист на ремонт автомобилей, проверка стартера,
-разборка генератора valeo, ремонт авто, ремонт авто на выезд, ремонт авто на дому, ремонт автомобилей,
+разборка генератора valeo, разборка генератора bosch, ремонт авто, ремонт авто на выезд, ремонт авто на дому, ремонт автомобилей,
 ремонт автомобилей с выездом, ремонт автомобили, ремонт бензогенератора, ремонт генератора хонда, ремонт генераторов малиновка, ремонт генераторов минск, ремонт генераторов минск малиновка, ремонт генераторов с выездом, ремонт генераторов уручье, ремонт генераторов фрунзенский район,
 ремонт машин, ремонт машины с выездом, ремонт стартера, ремонт стартера минск, ремонт стартеров, ремонт стартеров генераторов, ремонт стартеров и генераторов, ремонт стартеров минск с выездом, снятие генератора, срочный ремонт авто с выездом,сто, сто автоэлектрика, сто на выезд, сто форд, стоимость работы автоэлектрика,
 то и ремонт генератора, услуги автоэлектрика, услуги автоэлектрика с выездом, услуги по ремонту автомобилей, услуги по ремонту электрооборудования, частный автоэлектрик,
 ремонт стартеров, ремонт стартера, ремонт генератора, отремонтировать стартер,  отремонтировать генератор, мастерская по ремонту стартеров, мастерская по ремонту стартеров, ремонт стартера минск, ремонт генератора в минске, ремонт стартера в минске, ремонт стартеров и генераторов минск,
+ремонт, генераторов, авто, стартеров, обслуживание, замена, щетки, сто, автосервис, выездной ремонт, генератора, Ремонт и обслуживание автомобилей, Заявка на ремонт и обслуживание автомобилей, Каталог автосервисов, СТО, Акции, Вакансии, Новости, Поиск автосервисов, Отзывы, СТО Беларуси, СТО Минска,
+
 ">
   <link rel="canonical" href="https://estart.by/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <meta property="og:locale" content="ru_RU">
   <meta property="og:title" content="Ремонт стартеров и генераторов в Минске">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://estart.by/index.html">
   <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Диагностика и ремонт стартеров и генераторов в Минске + выездной ремонт">
+  <meta name="twitter:description" content="Диагностика и ремонт стартеров и генераторов автомобиля в Минске от компании Estart🔥. Гарантируем качество и низкие цены🔥.">
+  <meta name="twitter:label1" content="Примерное время для чтения"/>
+  <meta name="twitter:data1" content="3 минуты"/>
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -273,7 +279,7 @@
 
 
       <div class="company-overview-container__first-box company-overview-container__ion-icon">
-        <h3>Ремонт электрики</h3>
+        <h3><a href="pages/services/repair_electricity.html">Ремонт электрики</a></h3>
 
         <ion-icon name="flash-outline"></ion-icon>
         <!-- <hr>-->
@@ -283,7 +289,7 @@
       </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
-      <h3>Компьютерная диагностика</h3>
+      <h3><a href="pages/services/diagnostika.html">Компьютерная диагностика</a></h3>
 
       <ion-icon name="git-compare-outline"></ion-icon>
       <!-- <hr>-->
@@ -293,7 +299,7 @@
     </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
-      <h3>Зарядка аккумулятора</h3>
+      <h3><a href="pages/services/repair_electricity.html">Зарядка аккумулятора</a></h3>
 
       <ion-icon name="battery-charging-outline"></ion-icon>
       <!-- <hr>-->
@@ -303,7 +309,7 @@
     </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
-      <h3>Отключение сигнализации</h3>
+      <h3><a href="pages/services/repair_electricity.html">Отключение сигнализации</a></h3>
 
       <ion-icon name="radio-outline"></ion-icon>
       <!-- <hr>-->
@@ -313,7 +319,7 @@
     </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
-      <h3>СТО</h3>
+      <h3><a href="pages/services/STO.html">СТО</a></h3>
 
       <ion-icon name="business-outline"></ion-icon>
       <!-- <hr>-->
@@ -323,7 +329,7 @@
     </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
-      <h3>Выездной ремонт</h3>
+      <h3><a href="pages/services/viezdnoy_remont.html">Выездной ремонт</a></h3>
 
       <ion-icon name="car-sport-outline"></ion-icon>
       <!-- <hr>-->
