--- a/pages/services/STO.html
+++ b/pages/services/STO.html
@@ -46,13 +46,9 @@
     <h2>СТО:</h2>
   </div>
   <p>
-    Прежде всего, остановимся на основных функциях генератора авто.
-    Все современные авто оснащаются огромным количеством
-    разного электрооборудования, такие как акустическая система,
-    мониторы, подсветка и т.д. Чтобы обеспечить все эти потребители
-    используется аккумулятор и генератор. Таким образом, основными
-    функциями генератора являются: заряд аккумулятора и питание электрооборудования,
-    установленного в автомобиле.
+   Компания Estart рада предложить качественные услуги по ремонту автомобилей в центре Минска. Можно доехать с любой точки, СТО расположено по адресу: Переулок Ольшевского 7/9. 3 этаж. Помещение 320.
+    Приезжая к нам, вы экономите время и деньги. Ремонт авто не более трех дней! При быстром ремонте, вы можете ожидать свой автомобиль в комнате для ожидания, где вам предложат чай/кофе или поиграть в приставку.
+    Ждем вас!
   </p>
   <h4>Почему стоит выбрать нас?</h4>
   <ol>
