--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <meta name="twitter:description" content="Диагностика и ремонт стартеров и генераторов автомобиля в Минске от компании Estart🔥. Гарантируем качество и низкие цены🔥.">
   <meta name="twitter:label1" content="Примерное время для чтения"/>
   <meta name="twitter:data1" content="3 минуты"/>
+  <meta name="seobility" content="baa5882f9dbb8b1d1412fc4470596f78">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
