--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 то и ремонт генератора, услуги автоэлектрика, услуги автоэлектрика с выездом, услуги по ремонту автомобилей, услуги по ремонту электрооборудования, частный автоэлектрик,
 ремонт стартеров, ремонт стартера, ремонт генератора, отремонтировать стартер,  отремонтировать генератор, мастерская по ремонту стартеров, мастерская по ремонту стартеров, ремонт стартера минск, ремонт генератора в минске, ремонт стартера в минске, ремонт стартеров и генераторов минск,
 ремонт, генераторов, авто, стартеров, обслуживание, замена, щетки, сто, автосервис, выездной ремонт, генератора, Ремонт и обслуживание автомобилей, Заявка на ремонт и обслуживание автомобилей, Каталог автосервисов, СТО, Акции, Вакансии, Новости, Поиск автосервисов, Отзывы, СТО Беларуси, СТО Минска,
-
+служба запуска автомобиля, завести машину выезд, запуск двигателя автомобиля с выездом, ремонт стартера ивеко дейли, услуги по запуску двигателя в мороз, ремонт автосигнализации с выездом, замена стартера с выездом, завести машину помощь, ремонт сигнализации с выездом
 ">
   <link rel="canonical" href="https://estart.by/"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
