--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="ru-RU">
-
 <head>
   <meta charset="utf-8">
-  <title>Estart - ремонт электрооборудования автомобилей</title>
+  <title>Estart - ремонт стартеров и генераторов автомобилей</title>
   <meta name="description" content="Проверка и ремонт стартеров и генераторов авто за 1 день! ✅ Ремонт стартера, генератора по низким ценам в Минске. ✅ Гарантия от 30 дней.">
-  <meta name="keywords" content="Выездной ремонт авто, ремонт генератор, ремонт стартер, ремонт стартера с выездом минск, ремонт генераторов, ремонт генератров минск, ремонт генераторов минск с выездом, ремонт генератора минск, ремонт стартеров минск, ремонт стартеров минск с выездом, автоэлектрик, сто, стартер, выезд, цена, генератор, ремонт двигателя, купить генератор, реле стартера, втягивающее реле,
+  <meta name="keywords" content="Выездной ремонт авто, ремонт генератор, ремонт стартер, ремонт стартера с выездом минск, ремонт генераторов, ремонт генераторов минск, ремонт генераторов минск с выездом, ремонт генератора минск, ремонт стартеров минск, ремонт стартеров минск с выездом, автоэлектрик, сто, стартер, выезд, цена, генератор, ремонт двигателя, купить генератор, реле стартера, втягивающее реле,
   генератор купить, втягивающее реле стартера, ремонт генератора, автоэлектрик выезд, капитальный ремонт двигателя, автоэлектрик с выездом,
 ремонт генератора, ремонт стартера, выездной ремонт, автоэлектрик на выезд, выездной ремонт стартера, выездной ремонт генератора, сто на выезд,автоэлектрика, ремонт стартеров и генераторов, замена сцепления цена,
 электрический генератор, авто электрик,услуги автоэлектрика, капиталка двигателя, ремонт двс, электрогенераторы, стартер генератор, стартер в машине, компьютерная диагностика цена, стартер автомобиля,
@@ -19,7 +18,7 @@
 трафик 1.9, стартер втягивающее, сто ремонт авто, стартер пассат б6, снятие генератора, снятие стартера, сто диагностика авто, автоэлектрик с выездом на дом,
 компьютерная диагностика двигателя цена, стартер фольксваген, переборка генератора, ремонт генератора автомобиля, ремонт диодного моста генератора, цена стартера,
 сто ремонт, сто ремонт машин, стартер генератор ремонт, выездной электрик авто, стартер на машине, реле стартера пассат б6, valeo генератор,
-сто компьютерная дигностика, тяговое реле, стартер рено трафик, стартер на пежо 206, замена подшипников генератора цена, стартер на форд, стартер для автомобиля,
+сто компьютерная диагностика, тяговое реле, стартер рено трафик, стартер на пежо 206, замена подшипников генератора цена, стартер на форд, стартер для автомобиля,
 выездной мастер по ремонту авто, стоимость компьютерной диагностики авто, замена втягивающего, стартер в машине цена, стартер втягивающее реле,
 контакты втягивающего реле, сто с выездом, ремонт авто цены, диагностика мотора цена, стартер ивеко дейли, электрики на выезд, корпус генератора, стартер реле,
 стоимость полной диагностики автомобиля, замена реле стартера, пежо 206 стартер, ремень генератора замена, ближайший ремонт генераторов, мастерская по ремонту стартеров и генераторов,
@@ -156,21 +155,22 @@
       <label for="three_slide"></label>
     </div>
     <div class="slider-container-tabs__content">
-      <div class="box first-slide">
-        <div class="first-slide__contentBx contentBx">
-          <ion-icon name="checkmark-done-circle-outline"></ion-icon>
-          <h2><a href="#" >Сделайте свой автомобиль более надежным</a></h2>
-          <p>Быстрый ремонт стартеров и генераторов</p>
-          <!--<button>Подробнее</button>-->
-        </div>
-      </div>
       <div class="box second_slide">
-        <div class="Second-slide__contentBx contentBx">
+        <div class="first-slide__contentBx contentBx">
           <ion-icon name="car-sport-outline"></ion-icon>
           <h2><a href="#">Выезд в любую точку Минска</a></h2>
           <p>Сломались на дороге, а эвакуатор дорого? Компания Estart приедет на место поломки авто
-          и устранит проблему в кротчайшие сроки
+            и устранит проблему в кротчайшие сроки
           </p>
+          <!--<button>Подробнее</button>-->
+        </div>
+      </div>
+
+      <div class="box first-slide">
+        <div class="Second-slide__contentBx contentBx">
+          <ion-icon name="checkmark-done-circle-outline"></ion-icon>
+          <h2><a href="#" >Сделайте свой автомобиль более надежным</a></h2>
+          <p>Быстрый ремонт стартеров и генераторов</p>
           <!--<button>Подробнее</button>-->
         </div>
       </div>
@@ -195,7 +195,8 @@
   <hr>
   <p>
     Мы являемся одной из ведущих автомастерских, обслуживающих клиентов в Минске. <br>
-    Все услуги выполняются высококвалифицированными специалистами.
+    Все услуги выполняются высококвалифицированными специалистами. <br>
+    Наша компания первая, кто предоставляет <b>Расширенную гарантию</b> на ремонт Вашего автомобиля!
   </p>
 
   <div class="why-choose-us-container contentBx_1">
@@ -203,7 +204,11 @@
     <h3>БЫСТРЫЙ РЕМОНТ</h3>
     <hr>
     <p>
-      Мы ценим время клиентов, и ремонтируем авто в кратчайшие сроки с минимальными расходами на ремонт.
+      Мы ценим время клиентов, и ремонтируем авто в кратчайшие сроки с минимальными расходами на ремонт. <br>
+      <a href="#" style="text-decoration: none; ">
+        <b>При записи на ремонт с 08:00 до 12:00 действует скидка на ремонт стартера или генератора 14%</b> <br>
+        <b>При записи на ремонт с 12:00 до 15:00 действует скидка на ремонт стартера или генератора 5%</b>
+      </a>
     </p>
   </div>
 
@@ -227,13 +232,20 @@
   <br>
   <button><a href="pages/about_us.html">подробнее</a></button>
 </div>
+<div class="fast_call">
+  <h2>Успейте записаться до 12:00 и получите скидку 14% на ремонт стартера или генератора!</h2>
+  <button><a href="pages/contacts.html" style="color: #202c45">позвонить</a><ion-icon name="call-outline"></ion-icon></button>
+</div>
 <div class="vehicles-serviced">
   <div class="vehicles-serviced__left"></div>
   <div class="vehicles-serviced__right">
     <h2>Марки Авто</h2>
     <hr>
     <p>Мы обеспечиваем первоклассное техническое обслуживание почти всех типов автомобилей.<br>
-    *Если не нашли свое авто, не беда! Позвоните менеджеру и мы точно сможем вам помочь!*</p>
+    *Если не нашли свое авто, не беда! Позвоните менеджеру и мы точно сможем вам помочь!*
+      <br>
+      <b>Ниже приведены наиболее популярные марки, обслуживаемые в нашей компании.</b>
+    </p>
     <ol class="col2">
       <li>Acura</li>
       <li>Alfa Romeo</li>
