--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -85,12 +85,15 @@
       <li>СТО по адресу <a href="../pages/contacts.html">Переулок Ольшевского 7/9</a> 3-й этаж. Помещение 320.</li>
       <li>Удобное время-провождение при ремонте автомобиля на СТО. Удобный диван, телевизор, чай/кофе.</li>
       <li>Быстрый и качественный ремонт любой марки авто. Наши специалисты знают как делать быстро и качественно!</li>
+      <li>">Наша компания первая в Минске, которая предоставляет <b>РАСШИРЕННУЮ ГАРАНТИЮ</b> на ремонт вашего автомобиля!
+        <br>
+      </li>
     </ol>
+    <p>
+
+    </p>
   </div>
   </div>
-</div>
-
-
 
 
 <div class="company-overview">
@@ -101,6 +104,24 @@
     Мы справимся с любой проблемой как на иномарках, так и на отечественных автомобилях.
   </p>
   <div class="company-overview-container">
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3>Ремонт генератора</h3>
+
+      <ion-icon name="flash-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Быстрый и надежный ремонт электрооборудования автомобиля любой марки в кратчайшие сроки.
+      </p>
+    </div>
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3>Ремонт стартера</h3>
+
+      <ion-icon name="flash-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Быстрый и надежный ремонт электрооборудования автомобиля любой марки в кратчайшие сроки.
+      </p>
+    </div>
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
       <h3>Ремонт электрики</h3>
 
