--- a/pages/services/diagnostika.html
+++ b/pages/services/diagnostika.html
@@ -102,7 +102,7 @@
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
 
-  <h4>Цены на выездном ремонте:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -113,7 +113,7 @@
     <tbody>
     <tr>
       <td data-label="Услуга">Компьютерная диагностика</td>
-      <td data-label="Цена">от 60р</td>
+      <td data-label="Цена">от 30р</td>
     </tr>
     </tbody>
   </table>
@@ -125,11 +125,6 @@
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
 </div>
-
-
-
-
-
 
 <footer class="footer">
   <div class="container">
