--- a/pages/services/repair_electricity.html
+++ b/pages/services/repair_electricity.html
@@ -82,7 +82,7 @@
     <li>Быстрая разрядка аккумулятора</li>
     <li>Неправильный функционал электрических систем автомобиля</li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -92,8 +92,8 @@
     </thead>
     <tbody>
     <tr>
-      <td data-label="Услуга">Выявление утечки электричества</td>
-      <td data-label="Цена">от 60р</td>
+      <td data-label="Услуга">Проверка утечки тока</td>
+      <td data-label="Цена">от 25р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Проверка работоспособности электрических систем</td>
@@ -101,7 +101,7 @@
     </tr>
     <tr>
       <td data-label="Услуга">Замена лампочек</td>
-      <td data-label="Цена">от 20р</td>
+      <td data-label="Цена">от 5р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Зарядка аккумулятора</td>
@@ -116,10 +116,6 @@
       <td data-label="Цена">от 30р</td>
     </tr>
     <tr>
-      <td data-label="Услуга">Зачистка контактов</td>
-      <td data-label="Цена">от 20р</td>
-    </tr>
-    <tr>
       <td data-label="Услуга">Замена проводов</td>
       <td data-label="Цена">от 40р</td>
     </tr>
@@ -129,8 +125,8 @@
     более точной стоимости ремонта рекомендуется
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
-
-  <h4>Цены на выездном ремонте:</h4>
+<!--
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -172,7 +168,7 @@
       <td data-label="Цена">от 60р</td>
     </tr>
     </tbody>
-  </table>
+  </table>-->
   <p>Все цены зависят от сложности выполнения работ и стоимости запчастей. Так же выездной ремонт
     не осуществляется при плохих погодных условиях, таких как: сильный ветер, ливень, гроза, град, метель и все остальные
     не благоприятные погодные условия.
