--- a/pages/services/repair_engine.html
+++ b/pages/services/repair_engine.html
@@ -88,7 +88,7 @@
     <li>Пропала компрессия в цилиндрах</li>
     <li>Мотор глохнет во время езды</li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -99,11 +99,11 @@
     <tbody>
     <tr>
       <td data-label="Услуга">Ремонт стартера</td>
-      <td data-label="Цена">от 50р</td>
+      <td data-label="Цена">от 40р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Ремонт генератора</td>
-      <td data-label="Цена">от 50р</td>
+      <td data-label="Цена">от 40р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Замена свечей зажигания</td>
@@ -115,7 +115,7 @@
     </tr>
     <tr>
       <td data-label="Услуга">Замена ремня генератора</td>
-      <td data-label="Цена">от 40р</td>
+      <td data-label="Цена">от 20р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Замена топливного насоса</td>
@@ -135,7 +135,7 @@
     более точной стоимости ремонта рекомендуется
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
-
+<!--
   <h4>Цены на выездном ремонте:</h4>
   <table>
     <thead>
@@ -178,7 +178,7 @@
       <td data-label="Цена">от 80р</td>
     </tr>
     </tbody>
-  </table>
+  </table>-->
   <p>Все цены зависят от сложности выполнения работ и стоимости запчастей. Так же выездной ремонт
     не осуществляется при плохих погодных условиях, таких как: сильный ветер, ливень, гроза, град, метель и все остальные
     не благоприятные погодные условия.
