--- a/pages/services/repair_starter.html
+++ b/pages/services/repair_starter.html
@@ -83,7 +83,7 @@
     <li>После запуска двигателя - стартер не выключается и продолжает крутиться</li>
     <li>Сильный скрежет и шум во время срабатывания</li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -97,19 +97,16 @@
       <td data-label="Цена">от 40р</td>
     </tr>
     <tr>
-      <td data-label="Услуга">Проверка стартера</td>
-      <td data-label="Цена">от 30</td>
+      <td data-label="Услуга">Проверка стартера на стенде</td>
+      <td data-label="Цена">от 10р</td>
     </tr>
     <tr>
-      <td data-label="Услуга">Диагностика стартера</td>
-      <td data-label="Цена">от 20</td>
+      <td data-label="Услуга">Снятие и установка стартера</td>
+      <td data-label="Цена">от 40р</td>
     </tr>
+
     <tr>
       <td data-label="Услуга">Чистка стартера</td>
-      <td data-label="Цена">от 20р</td>
-    </tr>
-    <tr>
-      <td data-label="Услуга">Замена диодного моста</td>
       <td data-label="Цена">от 20р</td>
     </tr>
     </tbody>
@@ -118,7 +115,7 @@
     более точной стоимости ремонта рекомендуется
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
-
+<!--
   <h4>Цены на выездном ремонте:</h4>
   <table>
     <thead>
@@ -149,7 +146,7 @@
       <td data-label="Цена">от 40р</td>
     </tr>
     </tbody>
-  </table>
+  </table>-->
   <p>Все цены зависят от сложности выполнения работ и стоимости запчастей. Так же выездной ремонт
     не осуществляется при плохих погодных условиях, таких как: сильный ветер, ливень, гроза, град, метель и все остальные
     не благоприятные погодные условия.
