--- a/pages/services/viezdnoy_remont.html
+++ b/pages/services/viezdnoy_remont.html
@@ -92,39 +92,51 @@
     <tbody>
     <tr>
       <td data-label="Услуга:">Ремонт генератора</td>
-      <td data-label="Цена:">от 90р</td>
+      <td data-label="Цена:">от 40р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Ремонт стартера</td>
-      <td data-label="Цена:">от 90</td>
+      <td data-label="Цена:">от 40</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Диагностика генератора</td>
-      <td data-label="Цена:">от 70</td>
+      <td data-label="Цена:">от 30</td>
+    </tr>
+    <tr>
+      <td data-label="Услуга:">Диагностика стартера</td>
+      <td data-label="Цена:">от 30</td>
+    </tr>
+    <tr>
+      <td data-label="Услуга:">Снятие установка генератора</td>
+      <td data-label="Цена:">от 30</td>
+    </tr>
+    <tr>
+      <td data-label="Услуга:">Снятие установка стартера</td>
+      <td data-label="Цена:">от 30</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Замена лампочек</td>
-      <td data-label="Цена:">от 50р</td>
+      <td data-label="Цена:">от 20р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Запуск двигателя</td>
-      <td data-label="Цена:">от 80р</td>
+      <td data-label="Цена:">от 50р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Замена ремня генератора</td>
-      <td data-label="Цена:">от 70р</td>
+      <td data-label="Цена:">от 40р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Замена тросика сцепления</td>
-      <td data-label="Цена:">от 90р</td>
+      <td data-label="Цена:">от 60р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Компьютерная диагностика</td>
-      <td data-label="Цена:">от 60р</td>
+      <td data-label="Цена:">от 30р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Замена свечей зажигания</td>
-      <td data-label="Цена:">от 60р</td>
+      <td data-label="Цена:">от 30р</td>
     </tr>
     <tr>
       <td data-label="Услуга:">Проверка, зарядка, замена аккумулятора</td>
