--- a/pages/services/repaier_alternator.html
+++ b/pages/services/repaier_alternator.html
@@ -82,7 +82,7 @@
     <li>Звон или неприятный свист исходящий от генератора</li>
     <li>Шумит ременной привод генератора</li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -97,11 +97,11 @@
     </tr>
     <tr>
       <td data-label="Услуга">Замена ремня генератора</td>
-      <td data-label="Цена">от 20</td>
+      <td data-label="Цена">от 20р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Диагностика генератора</td>
-      <td data-label="Цена">от 20</td>
+      <td data-label="Цена">от 25р</td>
     </tr>
     <tr>
       <td data-label="Услуга">Замена щеток</td>
@@ -109,7 +109,7 @@
     </tr>
     <tr>
       <td data-label="Услуга">Замена диодного моста</td>
-      <td data-label="Цена">от 20р</td>
+      <td data-label="Цена">от 35р</td>
     </tr>
     </tbody>
   </table>
@@ -117,7 +117,7 @@
   более точной стоимости ремонта рекомендуется
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
-
+<!--
   <h4>Цены на выездном ремонте:</h4>
   <table>
     <thead>
@@ -148,7 +148,7 @@
       <td data-label="Цена">от 40р</td>
     </tr>
     </tbody>
-  </table>
+  </table>-->
   <p>Все цены зависят от сложности выполнения работ и стоимости запчастей. Так же выездной ремонт
     не осуществляется при плохих погодных условиях, таких как: сильный ветер, ливень, гроза, град, метель и все остальные
     не благоприятные погодные условия.
