--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <p>
     Мы являемся одной из ведущих автомастерских, обслуживающих клиентов в Минске. <br>
     Все услуги выполняются высококвалифицированными специалистами. <br>
-    Наша компания первая, кто предоставляет <b>Расширенную гарантию</b> на ремонт Вашего автомобиля!
+    Наша компания первая, кто предоставляет <b><a href="pages/warranty.html" style="color: #f2184f">Расширенную гарантию</a></b> на ремонт Вашего автомобиля!
   </p>
 
   <div class="why-choose-us-container contentBx_1">
@@ -205,7 +205,7 @@
     <hr>
     <p>
       Мы ценим время клиентов, и ремонтируем авто в кратчайшие сроки с минимальными расходами на ремонт. <br>
-      <a href="#" style="text-decoration: none; ">
+      <a href="#" style="text-decoration: none; color: #f2184f ">
         <b>При записи на ремонт с 08:00 до 12:00 действует скидка на ремонт стартера или генератора 14%</b> <br>
         <b>При записи на ремонт с 12:00 до 15:00 действует скидка на ремонт стартера или генератора 5%</b>
       </a>
