--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -85,7 +85,7 @@
       <li>СТО по адресу <a href="../pages/contacts.html">Переулок Ольшевского 7/9</a> 3-й этаж. Помещение 320.</li>
       <li>Удобное время-провождение при ремонте автомобиля на СТО. Удобный диван, телевизор, чай/кофе.</li>
       <li>Быстрый и качественный ремонт любой марки авто. Наши специалисты знают как делать быстро и качественно!</li>
-      <li>">Наша компания первая в Минске, которая предоставляет <b>РАСШИРЕННУЮ ГАРАНТИЮ</b> на ремонт вашего автомобиля!
+      <li>Наша компания первая в Минске, которая предоставляет <b>РАСШИРЕННУЮ ГАРАНТИЮ</b> на ремонт вашего автомобиля!
         <br>
       </li>
     </ol>
