--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="pages/services/viezdnoy_remont.html">Выездной ремонт</a></li>
+          <li><a href="pages/argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="pages/services/repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="pages/services/repair_starter.html">Ремонт стартера</a></li>
           <li><a href="pages/services/diagnostika.html">Компьютерная диагностика</a></li>
