--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -203,6 +203,7 @@
           <li><a href="services/repair_starter.html">Ремонт стартера</a></li>
           <li><a href="services/diagnostika.html">Компьютерная диагностика</a></li>
           <li><a href="services/repair_electricity.html">Автоэлектрик</a></li>
+          <li><a href="argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="services/STO.html">СТО</a></li>
         </ul>
       </div>
