--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -99,6 +99,7 @@
           <li><a href="services/diagnostika.html">Компьютерная диагностика</a></li>
           <li><a href="services/repair_electricity.html">Автоэлектрик</a></li>
           <li><a href="services/STO.html">СТО</a></li>
+          <li><a href="argon_svarka.html">Аргонная сварка</a></li>
         </ul>
       </div>
       <div class="footer-col">
