--- a/pages/services/STO.html
+++ b/pages/services/STO.html
@@ -79,7 +79,7 @@
     <li>Отремонтированный стартер/генератора будет опломбирован оригинальной голограммой. При нарушении целостности голограммы вам будет отказано в гарантийном обслуживании
     </li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -167,9 +167,10 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
+          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
-          <li><a href="diagnostika.html"></a></li>
+          <li><a href="diagnostika.html">Диагностика</a></li>
           <li><a href="STO.html">СТО</a></li>
         </ul>
       </div>
