--- a/pages/services/diagnostika.html
+++ b/pages/services/diagnostika.html
@@ -82,7 +82,7 @@
     <li>Быстрая разрядка аккумулятора</li>
     <li>Неправильный функционал электронных систем автомобиля</li>
   </ol>
-  <h4>Цены на СТО:</h4>
+  <h4>Цены:</h4>
   <table>
     <thead>
     <tr>
@@ -102,21 +102,6 @@
     <a href="../../pages/contacts.html"> позвонить менеджерам » </a></p>
 
 
-  <h4>Цены:</h4>
-  <table>
-    <thead>
-    <tr>
-      <th>Услуга</th>
-      <th>Цена</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td data-label="Услуга">Компьютерная диагностика</td>
-      <td data-label="Цена">от 30р</td>
-    </tr>
-    </tbody>
-  </table>
   <p>Все цены зависят от сложности выполнения работ и стоимости запчастей. Так же выездной ремонт
     не осуществляется при плохих погодных условиях, таких как: сильный ветер, ливень, гроза, град, метель и все остальные
     не благоприятные погодные условия.
@@ -141,9 +126,10 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
+          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
-          <li><a href="diagnostika.html"></a></li>
+          <li><a href="diagnostika.html">Диагностика</a></li>
           <li><a href="STO.html">СТО</a></li>
         </ul>
       </div>
