--- a/pages/services.html
+++ b/pages/services.html
@@ -91,6 +91,16 @@
     </div>
 
     <div class="company-overview-container__first-box company-overview-container__ion-icon">
+      <h3><a href="services/repair_starter.html">Аргонная сварка</a></h3>
+
+      <ion-icon name="construct-outline"></ion-icon>
+      <!-- <hr>-->
+      <p>
+        Профессиональная аргонная сварка любой сложности.
+      </p>
+    </div>
+
+    <div class="company-overview-container__first-box company-overview-container__ion-icon">
       <h3><a href="services/repair_electricity.html">Ремонт электрики</a></h3>
 
       <ion-icon name="flash-outline"></ion-icon>
@@ -235,6 +245,7 @@
       <div class="footer-col">
         <h4>Популярные услуги</h4>
         <ul>
+          <li><a href="argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="services/viezdnoy_remont.html">Выездной ремонт</a></li>
           <li><a href="services/repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="services/repair_starter.html">Ремонт стартера</a></li>
