--- a/pages/services/repaier_alternator.html
+++ b/pages/services/repaier_alternator.html
@@ -176,7 +176,8 @@
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
-          <li><a href="diagnostika.html"></a></li>
+          <li><a href="diagnostika.html">Диагностика</a></li>
+          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="STO.html">СТО</a></li>
         </ul>
       </div>
