--- a/pages/services/repair_starter.html
+++ b/pages/services/repair_starter.html
@@ -176,9 +176,10 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
+          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
-          <li><a href="diagnostika.html"></a></li>
+          <li><a href="diagnostika.html">Диагностика</a></li>
           <li><a href="STO.html">СТО</a></li>
         </ul>
       </div>
