--- a/pages/argon_svarka.html
+++ b/pages/argon_svarka.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Аргонная сварка</title>
-  <meta name="description" content="">
+  <meta name="description" content="Аргонная сварка любой сложности по низким ценам!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
